完成登录权限校验

--- a/笔记.md
+++ b/笔记.md
@@ -48,3 +48,42 @@
   - CSSTransition 是一个持续的动画，因为我通过 `in` 控制列表的隐藏和现实，所以在配置上加入了
     `unmountOnExit`
   - CSSTransition 通过包裹同类名元素，为该元素添加过度效果，在过度进行和结束期间添加不同的类名以达到动画的过度，而控制组件的显示和隐藏是通过操作组件的状态
+
+- 使用 Axios 响应拦截器返回的响应主体,即只返回服务器响应成功后的 data 内容
+
+  - 在 axios 设置拦截器
+
+  ```typescript
+  axios.interceptors.response.use((result: AxiosRequestConfig) => result.data)
+  ```
+
+  - 在发送请求的函数显式告诉拦截后返回内容的格式
+
+  ```typescript
+  interface LoginResponse {
+    code: number
+    msg?: string
+  }
+
+  // 验证是否登录
+  export function checkLogin(): Promise<LoginResponse> {
+    return axios.get('/personal/login')
+  }
+  ```
+
+- 权限校验
+  - 路由的验证和渲染是同步的,不允许在校验中出现异步,因为这样在异步没有完成之前,根本不知道该渲染谁,语法不支持这样操作
+  - 下面代码的操作方式是不允许的
+    ```typescript
+    <Route
+      path='/person/info'
+      render={async () => {
+        // 验证是否登录的权限校验,权限校验的是同步的
+        let result = await checkLogin()
+        if (result.code === 0) {
+          return <Info />
+        }
+        return <Tip />
+      }}
+    />
+    ```
