性能不好的向服务器发送获取用户登录信息的请求方式

--- a/笔记.md
+++ b/笔记.md
@@ -71,19 +71,24 @@
   }
   ```
 
-- 权限校验
-  - 路由的验证和渲染是同步的,不允许在校验中出现异步,因为这样在异步没有完成之前,根本不知道该渲染谁,语法不支持这样操作
-  - 下面代码的操作方式是不允许的
-    ```typescript
-    <Route
-      path='/person/info'
-      render={async () => {
-        // 验证是否登录的权限校验,权限校验的是同步的
-        let result = await checkLogin()
-        if (result.code === 0) {
-          return <Info />
-        }
-        return <Tip />
-      }}
-    />
-    ```
+* react-router-dom 知识点
+
+  - 在 Route 组件中,使用 render 函数返回的组件不是受路由管控的组件,要使用 widthRouter 高阶处理
+
+  - 权限校验
+
+    - 路由的验证和渲染是同步的,不允许在校验中出现异步,因为这样在异步没有完成之前,根本不知道该渲染谁,语法不支持这样操作
+    - 下面代码的操作方式是不允许的
+      ```typescript
+      <Route
+        path='/person/info'
+        render={async () => {
+          // 验证是否登录的权限校验,权限校验的是同步的
+          let result = await checkLogin()
+          if (result.code === 0) {
+            return <Info />
+          }
+          return <Tip />
+        }}
+      />
+      ```
