完成登录信息保存在 redux 中

--- a/笔记.md
+++ b/笔记.md
@@ -93,6 +93,10 @@
       />
       ```
 
+  - 当路由切换的时候,对应的组件回重新渲染,但是渲染也要分情况
+    - 之前渲染其他组件的时候把当前组件彻底从页面一处了,再次渲染当前组件,走的是第一次挂载的流程(也就是一切从头开始)
+    - 如果当前组件之前没有彻底在页面中移除(本组件内容的子组件在切换),每一次走的是更新的流程,不是重新挂载的流程
+
 * typescript redux thunk 流程梳理
 
   - 定义行为标识,此处 person 只有一个用于与服务器获取数据的行为
@@ -309,3 +313,28 @@
 
     - 这里主要用到 `Provider` 把 store 挂载在 `react`实例上
     - 同时也因为使用了 `react-hot-loader` 实现开发的热加载,最后使用了高阶处理导出组件
+
+
+- 登录逻辑
+  - 首次进入person 页
+    - 生命周期
+      - constructor
+        - 设置 state 状态未登录
+    - 检测是否登录 ->向服务器发送请求检测登录 -> 根据返回的code 设定本组件的 isloin 状态
+    - 根据 islogin 跳转到不同页面
+      - islogin == true 
+        - 跳转到 info 页面 -> `Info`组件
+          - 显示用户个人信息
+            - 退出登录
+              - 向服务器发送退出登录请求
+                - 跳转到个人信息页面 ->再次检测是否登录 -> 这次因为只是在 person 组件内部切换,需要使用 willUpdate 获取用户登录信息
+      - islogin == false
+        - 跳转到提示页面 -> `Tip`组件
+          - 点击登录按钮
+            - 跳转到登录页面 -> `Login` 组件
+            - 输入用户名密码 -> 向服务器发送登录请求
+              - 成功 -> 跳转到个人信息页面
+                - `this.props.histroy.push('/person/info)`
+                - `Info 组件`
+                  - componentWillUpdate
+              - 失败 -> 提示用户重新输入
