完成注册逻辑的书写

--- a/笔记.md
+++ b/笔记.md
@@ -314,15 +314,15 @@
     - 这里主要用到 `Provider` 把 store 挂载在 `react`实例上
     - 同时也因为使用了 `react-hot-loader` 实现开发的热加载,最后使用了高阶处理导出组件
 
-
 - 登录逻辑
-  - 首次进入person 页
+
+  - 首次进入 person 页
     - 生命周期
       - constructor
         - 设置 state 状态未登录
-    - 检测是否登录 ->向服务器发送请求检测登录 -> 根据返回的code 设定本组件的 isloin 状态
+    - 检测是否登录 ->向服务器发送请求检测登录 -> 根据返回的 code 设定本组件的 isloin 状态
     - 根据 islogin 跳转到不同页面
-      - islogin == true 
+      - islogin == true
         - 跳转到 info 页面 -> `Info`组件
           - 显示用户个人信息
             - 退出登录
@@ -338,3 +338,27 @@
                 - `Info 组件`
                   - componentWillUpdate
               - 失败 -> 提示用户重新输入
+
+- 注册逻辑
+
+  - 遇到的困难
+    - 刚开始的时候我想到注册的逻辑
+    - 注册就完成对新注册用户的登录
+    - 向服务器发送新用户的用户名信息
+    - 获取响应数据后更新 `redux` 中的用户信息
+    - 跳转到用户信息页
+    - 上面说的逻辑有点问题,因为根据 `info` 组件写的逻辑信息,如果之前已经有用户登录了,那么存储 `baseInfo` 的属性是非空的,那么`info`组件就不会重新获取 更新 `redux` 中存储的 `baseInfo` 信息
+    - 然后我就想,是不是需要在 `register`组件中直接更新 `baseInfo`呢,后来灵光一闪,发现可以不用这么复杂的处理,
+      - 当用户进入到注册页时,直接修改`redux`的 `isLogin`状态为`false`,
+      - 重新向服务器请求一次`baseInfo`中的数据
+      - 设置 `islogin`为`true`
+      - 因为更新了 `redux` 中的数据,所以会在跳转到`info`组件时重新渲染
+  - 总结
+
+    - 其实这个功能不算难实现,主要是思路需要理解清晰就可以了
+    - 新用户注册完毕时,因为 `redux`中的数据没有更新,所以用户看到的信息还是之前所存储的信息,在注册完成后
+      - 重新向服务器请求新用户信息,并且设置登录状态为`true`即可
+
+  - 再次总结,上面说得都其实都不对,都是自己想多了
+    - 逻辑就是很简单的
+      - 注册完成后 -> 使用`login`函数进行登录 -> 向服务器请求成功并响应 -> 重新向服务器获取新用户的个人信息数据并存储到 redux 中 -> 最后设置用户登录状态为`true`
