完成加载页面数据并展示,调整了 action 和reducer 的写法,更正了一些类型的定义

--- a/笔记.md
+++ b/笔记.md
@@ -362,3 +362,168 @@
   - 再次总结,上面说得都其实都不对,都是自己想多了
     - 逻辑就是很简单的
       - 注册完成后 -> 使用`login`函数进行登录 -> 向服务器请求成功并响应 -> 重新向服务器获取新用户的个人信息数据并存储到 redux 中 -> 最后设置用户登录状态为`true`
+
+- 分页数据展示
+
+  - 服务器接收参数
+    - limit:要求返回数据信息的个数
+    - page:要求返回数据所在的页数
+    - type:要求返回数据的类型
+  - 实现
+
+    - 数据展示
+
+      - 向服务器发送数据,根据传递的参数获取指定的数据,存储在 redux 中
+      - 组件根据用户提供的参数,向 redux 中获取数据并展示
+
+        - 分页
+          - 向服务器发送请求,把请求后得到的数据追加到 `redux`容器中,组件更新并展示
+        - 筛选
+          - 用户传入类型的参数,redux 容器筛选指定的参数替换原有的数据
+
+    - `api.ts`
+
+      - 发送给服务器的请求参数只使用服务器必须的参数
+
+      ```typescript
+      interface payloadType {
+        limit: number
+        page: number
+        type: string
+      }
+
+      interface courseListResponse extends ResponseWithData {
+        total: number
+        limit: number
+        page: number
+      }
+      export const queryList = (
+        payload: payloadType
+      ): Promise<courseListResponse> => {
+        return axios.get('/course/list', {
+          params: payload
+        })
+      }
+      ```
+
+    - `actionCreator.ts`
+      - 对用户传入的`payload`参数进行处理
+        - 部分`api`需求的参数分配给 `api`提供的方法
+          - `type`:请求指定的数据类型,默认`all`
+          - `limit`:每次请求数据的个数,默认 10
+          - `page`:请求指定页数的数据,默认 1 -> 后续通过用户的操作进行增量,以此达到请求不同数据的目的
+        - 其余关于如何展示数据的参数通过`dispatch`派发给`reducer`
+          - `courseType`:课程的类型 -> `all`,`react`,`vue`,`小程序`
+          - `flag`: 对容器中`courseData`数据进行的操作类型,默认`push`
+          - `result`: 记录类服务器返回的数据
+          - `page`:当前数据所在的页数
+          - `code`:标识请求成功或者失败 1->失败 0->成功
+          - `msg`:请求成功或是失败的提示信息
+          - `total`:请求数据在服务器中的总页数
+          - `limit`:每次请求数据的最大个数
+          - `data`:请求成功后返回的数据信息
+
+    ```typescript
+    export interface PayLoadType {
+      limit?: number
+      page?: number
+      flag?: string
+      courseType?: string
+      type?: string
+    }
+
+    type ThunkResult<R> = ThunkAction<
+      R,
+      CourseState,
+      undefined,
+      Action<courseAction>
+    >
+
+    const getList = (payload: PayLoadType): ThunkResult<void> => {
+      let { flag = 'push', limit = 10, page = 1, type = 'all' } = payload
+      return async (dispatch: Dispatch) => {
+        const result = await queryList({ limit, page, type })
+        dispatch({
+          type: QUERY_LIST,
+          result,
+          flag,
+          courseType: type
+        })
+      }
+    }
+    ```
+
+    - `reducer.ts`
+      - 对传递进来的数据进行处理
+        - 对于不同的参数,对`redux`容器中的数据进行不同的处理
+        -
+
+    ```typescript
+        case QUERY_LIST:
+          let { result, flag, courseType } = action
+          newState.courseType = courseType
+        if (action.result.code === 0) {
+          newState.courseData.total = result.total
+          newState.courseData.limit = result.limit
+          newState.courseData.page = result.page
+          newState.courseData.data =
+            flag === 'push'
+              ? newState.courseData.data.concat(result.data)
+              : result.data
+        }
+    ```
+
+- 正确的写 actionType 的方式
+
+  - 在 `type.ts`
+
+    - 定义行为标识 `actionTypes`,使用字面量常量,不要使用 `enum`
+    - 定义每个 `Action`的形状
+    - 使用联合类型定义所有 `Action`的形状
+
+    ```typescript
+    // 定义行为标识 `actionTypes`,使用字面量常量
+    export const QUERY_LIST = QUERY_LIST
+    export type QUERY_LIST = typeof QUERY_LIST
+
+    // 定义每个 `Action`的形状
+    export interface GetList extends AnyAction {
+      type: QUERY_LIST
+      payload: ListResponse
+    }
+
+    export interface GetBanner extends AnyAction {
+      type: QUERY_BANNER
+      payload: ResponseWithData
+    }
+
+    export type CourseAction = GetList | GetBanner
+    ```
+
+  - 在 `reducer.ts`
+    - 定义初始化`state`数据
+    - 定义`reducer`函数
+      - 对函数的每个函数都标明类型或赋初始值,这样能告诉编译器所使用到的数据类型,同时也能让编辑器获得智能提示,获得数据具体的类型
+        - `state = init_state`
+        - `action:courseAction`
+      - 由于使用了 `JSON`提供的方法简易的深拷贝`state`, 需要使用类型断言让编译器知道`newState`的类型
+        `let newState = JSON.parse(JSON.stringify(state)) as CourseState`
+    - 处理好业务逻辑后,默认导出`courseReducer`函数
+      `export default course as Reducer<CourseState>`
+
+* typescript 方法重载
+
+- 使用可选参数使得方法重载
+  - 需求,在`List.tsx` 组件中,组件加载完成后,使用`getList`方法请求数据,此时并不需要传递参数,而是可以不传递参数,使用 `actionCreator`中默认的参数发送请求
+  - 遇到的问题
+    - `getList: (payload?: PayLoadType) => void`
+      - 使用了可选参数后,编译器报错,提示 `类型 PayLoadType |undefined`中不存在属性 `xxx`
+    - 原因
+      当配置类可选参数后,传递给方法的参数有可能为 undefined,而在 `actionCreator`中,`let {flag = 'push',limit = 10, page = 1,type = 'all'} = payload`,这里使用了 payload 解构赋值,undefined 中并不存在以上属性,所以会报错
+    - 解决
+      <s>
+      - 因为我们当用户没传递参数进来时,已经为里面的参数赋予了默认值,此时可以使用 typescript 的类型断言,把`payload`的类型显式指定给编译器,这样变异就能通过了
+      - `let {flag = 'push',limit = 10, page = 1,type = 'all'} = payload as PayLoadType`
+        </s>
+    - 应该直接在函数定义时使用默认参数并指定类型,赋默认值
+      `const getList = (payload: PayLoadType = {})`
