基本完成项目,下一步开始重构项目

--- a/笔记.md
+++ b/笔记.md
@@ -81,7 +81,7 @@
     - 下面代码的操作方式是不允许的
       ```typescript
       <Route
-        path='/person/info'
+        path="/person/info"
         render={async () => {
           // 验证是否登录的权限校验,权限校验的是同步的
           let result = await checkLogin()
@@ -123,12 +123,7 @@
 
     export interface IPersonState {}
 
-    type ThunkResult<R> = ThunkAction<
-      R,
-      IPersonState,
-      undefined,
-      Action<personGetInfoAction>
-    >
+    type ThunkResult<R> = ThunkAction<R, IPersonState, undefined, Action<personGetInfoAction>>
 
     const queryBaseInfo = (): ThunkResult<void> => {
       return async (dispatch: Dispatch) => {
@@ -302,8 +297,8 @@
 
     const App: React.FC = () => {
       return (
-        <div className='App'>
-          <Provider store={store}></Provider>
+        <div className="App">
+          <Provider store={store} />
         </div>
       )
     }
@@ -397,9 +392,7 @@
         limit: number
         page: number
       }
-      export const queryList = (
-        payload: payloadType
-      ): Promise<courseListResponse> => {
+      export const queryList = (payload: payloadType): Promise<courseListResponse> => {
         return axios.get('/course/list', {
           params: payload
         })
@@ -432,12 +425,7 @@
       type?: string
     }
 
-    type ThunkResult<R> = ThunkAction<
-      R,
-      CourseState,
-      undefined,
-      Action<courseAction>
-    >
+    type ThunkResult<R> = ThunkAction<R, CourseState, undefined, Action<courseAction>>
 
     const getList = (payload: PayLoadType): ThunkResult<void> => {
       let { flag = 'push', limit = 10, page = 1, type = 'all' } = payload
@@ -514,6 +502,7 @@
 * typescript 方法重载
 
 - 使用可选参数使得方法重载
+
   - 需求,在`List.tsx` 组件中,组件加载完成后,使用`getList`方法请求数据,此时并不需要传递参数,而是可以不传递参数,使用 `actionCreator`中默认的参数发送请求
   - 遇到的问题
     - `getList: (payload?: PayLoadType) => void`
@@ -529,36 +518,38 @@
       `const getList = (payload: PayLoadType = {})`
 
 - 请求数据时使用 loading 效果
+
   - 在使用按钮向服务器发送请求时,如果此时快速点击按钮,会向服务器发送多个请求,这样的情况需要避免
   - 在 `ant` 中,按钮有默认属性 `loading`,只需要在控制这个属性就可以实现在加载数据中禁用用户点击按钮,就不会发送多次请求
-   - 在`List`组件内部,添加状态 `isloading` 默认设置为`false` 当用户点击按钮时设置为`true`,在`List`组件的生命周期函数 `componentWillReceiveProps`中,重新设置为`false`,即可完成需求
+  - 在`List`组件内部,添加状态 `isloading` 默认设置为`false` 当用户点击按钮时设置为`true`,在`List`组件的生命周期函数 `componentWillReceiveProps`中,重新设置为`false`,即可完成需求
 
 - 根据属性切换查询的内容
+
   - 在头部导航中,存在多个 li 标签,用于切换显示用户所选择的数据类型
-    - `react vue all xiaochengxu` 
+    - `react vue all xiaochengxu`
   - 用户点击不同标签时,向 `redux`发送带有`flag`的请求
 
   - 遇到问题
     - 在为每个 `li` 标签绑定自定义属性`type`时,编译器提示 `li` 上不存在属性
-  解决方案
+      解决方案
     - 在参考网上的回答后,在`NavTop.tsx`组件声明模块,并为全部 HTML 添加自定义属性`type`网上都说这种方法很脏,
-    但在没找到其他解决方案时,先暂时使用.以后找到更好的方案再重新编写代码
+      但在没找到其他解决方案时,先暂时使用.以后找到更好的方案再重新编写代码
     ```typescript
-    // 添加自定义属性 
-      <ul className='filter-box' onClick={this.handleClick}>
-        <li type='all'>全部课程</li>
-        <li type='react'>react课程</li>
-        <li type='vue'>Vue课程</li>
-        <li type='xiaochengxu'> 小程序课程</li>
-      </ul>
-    // 声明 react 模块 
-      declare module 'react' {
-        interface HTMLAttributes<T> extends AriaAttributes, DOMAttributes<T> {
-          // extends React's HTMLAttributes
-          type?: string
-        }
+    // 添加自定义属性
+    ;<ul className="filter-box" onClick={this.handleClick}>
+      <li type="all">全部课程</li>
+      <li type="react">react课程</li>
+      <li type="vue">Vue课程</li>
+      <li type="xiaochengxu"> 小程序课程</li>
+    </ul>
+    // 声明 react 模块
+    declare module 'react' {
+      interface HTMLAttributes<T> extends AriaAttributes, DOMAttributes<T> {
+        // extends React's HTMLAttributes
+        type?: string
       }
-  // 点击事件处理函数
+    }
+    // 点击事件处理函数
     handleClick = (e: MouseEvent) => {
       let target = e.target as any,
         tarTag = target.tagName
@@ -573,41 +564,53 @@
         })
       }
     }
+    ```
+
+  ```
+
   ```
 
 - 购物车实现流程
+
   - 用户点击购买按钮,向服务器发送请求,把商品信息添加到购物车中
     - 目的
       - redux 中所存储的信息会在用户刷新页面后消失,需要在服务器中存储
   - 当服务器返回存储成功后,我们把信息从 redux 中存储一份(最好是从服务器中获取,这样的数据才是最准确的)
+
     - 目的
       - 以后切换到我的购物车页面,没必要总是从服务器获取,从 redux 中获取也可以,提供性能
       - 之所以是从服务器获取信息存储到 redux 中,因为服务器的信息是最准确的,即使页面刷新了,即使某些操作我们忘记向 redux 中存储了,每一次派发都可以获取最新的信息(只要向服务器发送添加购买的请求即可)
 
-  - 流程梳理 
+  - 流程梳理
     1 进入课程详情页 -> 查看 redux shopCart 信息中是否包含该数据
-      - 包含在 unpay 中
-        - 设置 组件的 isInShop 属性 0  -> 表示 已加入购物车但还没支付
-      - 包含在 pay 中
-        - 设置组件的 isInShop 属性 1 -> 表示 已经加入购物车并且支付成功 
-      - 不包含
-        - 设置组件的 isInShop 属性 -1 -> 表示 未加入购物车
+
+    - 包含在 unpay 中
+      - 设置 组件的 isInShop 属性 0 -> 表示 已加入购物车但还没支付
+    - 包含在 pay 中
+      - 设置组件的 isInShop 属性 1 -> 表示 已经加入购物车并且支付成功
+    - 不包含
+      - 设置组件的 isInShop 属性 -1 -> 表示 未加入购物车
 
     2 按钮的显示
-      - isInShop
-        - -1 -> 加入购物车
-            - 事件 -> 向服务器发送添加项目到购物车 -> 同时查询服务器中购物车的数据->存放到 redux pay 中
+
+    - isInShop
+      - -1 -> 加入购物车
+        - 事件 -> 向服务器发送添加项目到购物车 -> 同时查询服务器中购物车的数据->存放到 redux pay 中
           0 -> 从购物车移除
-            - 事件 -> 向服务器发送从购物车中移除项目 -> 同时查询服务器中购物车的数据 -> 存放到 redux unpay 中 
-           1 -> 不显示按钮
+        - 事件 -> 向服务器发送从购物车中移除项目 -> 同时查询服务器中购物车的数据 -> 存放到 redux unpay 中
+          1 -> 不显示按钮
+
   - 实现
+
     - 用户点击进入组件,当组件已经挂载到 react 实例上,根据传入的 CourseID 获取数据,设置组件的状态为服务器返回的数据
+
       - 由于组件时受路由管控的,所以可以从浏览器地址获取组件对应的参数 -> 获取 courseID
       - 根据 `courseID` 从服务器获取当前组件对应的数据,并且挂载到组件的状态上
       - 对比 redux 中购物车所存储的已经在购物车 `已支付` 和 `未支付` 的课程信息,遍历所有课程,对比每一个课程的 `id` 是否和 当前`courseID`相等,以此判定组件是否存在于购物车中,使用`isInShop`存储对应的状态
-       - -1 => 表示没加入购物车, 0 => 表示已经加入购物车但是还没支付, 1 => 表示已经支付成功 
+      - -1 => 表示没加入购物车, 0 => 表示已经加入购物车但是还没支付, 1 => 表示已经支付成功
 
       - 对比完成后,设置组件的状态信息 -> 组件从新渲染
+
       ```typescript
           async componentDidMount() {
             // 根据组件的地址信息的 query,获得对应的 courseID
@@ -669,11 +672,152 @@
     - 当用户强制刷新浏览器页面时,`redux`存储的数据会消失不见,也没有从服务器中获取已经存储的添加进购物车的数据
       - 需要重新向服务器发送请求,把之前用户操作添加进购物车的数据重新获取
         - 这个功能最好进行操作的地方是在公有组件中,即进入任何一个路由都会加载的页面,在本项目中,比较适合进行操作的组件时 `NavTop` `NavBottom` 在此我选择使用 `NavTop`作为获取数据的组件
-          - 
-        
+          -
+
         ```typescript
              async componentDidMount() {
               await this.props.getShop(0)
               await this.props.getShop(1)
             }
         ```
+
+- 我的课程实现
+
+  - 用户点击进入我的课程页
+
+    - 使用`antd` 的 `Menu`组件实现点击导航
+      - 根据导航的点击,设置组件的当前展示的状态
+      - 根据展示的状态不同跳转到指定的子组件
+
+
+    ```typescript
+      // 构造函数中,根据当前浏览器中的地址,设置组件当前的状态
+          this.state = { current: this.props.location.pathname === '/mycourse/pay' ? 'pay' : 'unpay'}
+
+      // 处理 Menu 组件的点击跳转函数
+        handleClick = (e: any) => {
+          this.setState({
+            current: e.key
+          })
+          // 点击跳转到指定的路由地址
+          this.props.history.push(e.key === 'pay' ? '/mycourse/pay' : '/mycourse/unpay')
+        }
+    ```
+
+    - 从 redux 中获取已经存储到购物车的数据
+
+      - `pay`组件展示已经支付成功的列表
+        - 向服务器发送请求,判断当前用户的登录状态
+          - 未登录 -> 显示提醒用户需要登录才能进行操作,并提示用户跳转到登录页
+          - 登录   -> 由于在组件渲染的时候,NavTop 组件已经从服务器中获取到用户已支付的信息,此处可以直接从 redux 中获取用户购物车数据,根据数据渲染已支付的信息
+            - 已购列表存在内容,显示购物车内容
+            - 已购列表内不存在课程,提醒用户去购物车支付 -> 指定用户跳转到购物车列表
+
+
+      - `unpay`组件展示已经加入购物车的列表
+        - 从 redux 中的购物车数据请求并渲染
+          - 在每个项目中添加复选框 一遍用户设置批量操作
+            - 复选框逻辑
+              - 在 `actionCreator` 中定义选择操作
+                - 此处 参数`mode` 有两种类型 分类为 `number` 和 字符串`all`
+                  - 当用户操作单个组件时,使用的是 `number`类型,为当前课程信息添加 `check`属性
+                  - 当用户在 `UnPay`组件点击复选框时,操作的是 `redux` 容器所存储的 `selectAll`属性
+              ```typescript
+                const handleSelect = (mode: Tmode): courseAction => {
+                  return {
+                    type: HANDLE_SELECT,
+                    mode
+                  }
+                }
+                ```
+              - `reducer`中处理操作逻辑并返回新的组件状态
+
+              ```typescript
+              case HANDLE_SELECT:
+                let mode = action.mode
+                if (mode === 'all') {
+                  // 如果进行选择前已经是全选状态,那么再次选择全选为取消全选状态
+
+                  newState.selectAll = !newState.selectAll
+                  // 把所有存储在列表中的数据标记选择状态为用户所使用的 => true -> false  false -> true
+                  newState.shopCart.unpay = newState.shopCart.unpay = newState.shopCart.unpay.map((item) => {
+                    return { ...item, check: newState.selectAll }
+                  })
+                } else {
+                  // 其余情况,handle_select 处理的是单个 item 的复选框
+                  // , 根据当前 item.id 匹配当前的 mode 传入的数字 => 由 courseID提供,改变 item 内部check 状态
+                  let item = newState.shopCart.unpay.find((item) => item.id === mode) as courseListData
+                  item.check = !item.check
+
+                  // 定义 f => flag 标识 用于查看是否当前资料中是否全部的 check 状态是否相同,如果都是相同,则设置 selectAll 为 true
+                  let f = state.shopCart.unpay.find((item) => {
+                    return item.check === false
+                  })
+                  f ? (state.selectAll = false) : (state.selectAll = true)
+                }
+              ```
+
+- 支付/删除
+  - 首先在所有数据中找出使用复选框选中的项,分别执行 api:`removeFromShopCart(CourseID)`方法,等到删除操作完成(所有的伤处操作都完成了),重新从服务器中获取最新的购物车信息,更新 `redux` 中的状态`(dispatch:queryShopCart)`,redux 信息更新,页面重新渲染
+
+* 项目重构
+  - 由于当前项目是根据网上的视频教程所写的,而且视频所使用的是 `JavaScript`书写的,而我是使用 `typescript`,项目解构划分不合理,现在开始根据这几天内所学到的只是,重新规格项目的目录解构,以及重新规划代码
+  - 当前项目目录解构
+  ```
+   |-- ketang
+      |-- api
+      |   |-- course.ts  -> 存放 course的 API
+      |   |-- index.ts   -> 对   axios 封装
+      |   |-- person.ts  -> 存放 person 的 API
+      |   |-- types.ts   -> 存放请求时发送或接受数据的类型
+      |-- component      -> 存放公有组件
+      |   |-- NavBottom.tsx
+      |   |-- NavTop.tsx
+      |-- routes         -> 存放使用路由渲染组件
+      |   |-- Home.tsx
+      |   |-- Mycourse.tsx
+      |   |-- Person.tsx
+      |   |-- course
+      |   |   |-- CourseItem.tsx
+      |   |   |-- Info.tsx
+      |   |   |-- List.tsx
+      |   |   |-- courseItem.less
+      |   |-- mycourse
+      |   |   |-- pay.tsx
+      |   |   |-- unpay.tsx
+      |   |-- person
+      |       |-- Info.tsx
+      |       |-- Login.tsx
+      |       |-- Register.tsx
+      |       |-- Tip.tsx
+      |-- static      -> 静态文件存放
+      |   |-- css
+      |   |   |-- common.less
+      |   |   |-- course.less
+      |   |   |-- my-course.less
+      |   |   |-- person.less
+      |   |   |-- reset.min.css
+      |   |-- images
+      |       |-- default.png
+      |       |-- login_bg.png
+      |       |-- logo.png
+      |       |-- profile.png
+      |-- store       -> redux 处理存放
+      |   |-- index.ts
+      |   |-- type.ts
+      |   |-- action
+      |   |   |-- course.ts
+      |   |   |-- index.ts
+      |   |   |-- person.ts
+      |   |-- reducer
+      |       |-- course.ts
+      |       |-- index.ts
+      |       |-- person.ts
+      |-- utils
+  ```
+
+  按照上面的文件夹划分,看起来是挺合理的,但是在我使用的时候,总需要在 总是需要在 `store`文件夹下的`types.ts`获取或书写新的类型,使用的时候感觉很乱
+    - 按照我现在基本完成了这个项目的第一次书写学到的和感觉到的,决定把不同的 `reducer` 存放在不同的文件夹,并在所在文件夹使用当前文件夹下的`types.ts`
+
+  - 工欲善其事必先利其器
+    - 这几天写代码的时候感觉有好多代码都是重复的,与其每次都重新写一次,不如把能重用的代码都书写成代码片段,这样书写代码的时候就可以更快了
